test/Fail/NoEtaEquality.err
NoEtaEquality.agda:8.8-9: error: [UnsolvedMetaVariables]
Unsolved metas at the following locations:
  NoEtaEquality.agda:8.8-9
